@@ -25,6 +25,7 @@ import com.aliyun.sdk.service.rocketmq20220801.models.GetConsumerGroupLagRespons
 import com.aliyun.sdk.service.rocketmq20220801.models.GetConsumerGroupLagResponseBody;
 import com.aliyun.sdk.service.rocketmq20220801.models.GetTraceResponse;
 import com.aliyun.sdk.service.rocketmq20220801.models.GetTraceResponseBody;
+import com.aliyun.sdk.service.rocketmq20220801.models.ListConsumerGroupsRequest;
 import com.aliyun.sdk.service.rocketmq20220801.models.ListConsumerGroupsResponse;
 import com.aliyun.sdk.service.rocketmq20220801.models.ListConsumerGroupsResponseBody;
 import com.aliyun.sdk.service.rocketmq20220801.models.ListMessagesResponse;
@@ -43,10 +44,12 @@ import org.apache.rocketmq.studio.instance.InstanceRepository;
 import org.apache.rocketmq.studio.instance.InstanceVO;
 import org.apache.rocketmq.studio.instance.group.ConsumerGroupVO;
 import org.apache.rocketmq.studio.instance.group.QueueProgressVO;
+import org.apache.rocketmq.studio.instance.group.ResetConsumerOffsetPreviewVO;
 import org.apache.rocketmq.studio.instance.message.MessageRecordVO;
 import org.apache.rocketmq.studio.instance.message.TraceNodeVO;
 import org.apache.rocketmq.studio.instance.message.TraceRecordVO;
 import org.apache.rocketmq.studio.instance.topic.TopicVO;
+import org.apache.rocketmq.studio.provider.InstanceCapability;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -61,21 +64,24 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
+import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class AliyunInstanceProviderTest {
 
-    private static final String STUDIO_INSTANCE_ID = "inst-1";
+    private static final String STUDIO_INSTANCE_ID = "7";
+    private static final String STUDIO_INSTANCE_PK = STUDIO_INSTANCE_ID;
     private static final String CLOUD_INSTANCE_ID = "rmq-cn-001";
     private static final String REGION = "cn-hangzhou";
-    private static final String CREDENTIAL_ID = "cred-1";
+    private static final Long CREDENTIAL_ID = 1L;
 
     @Mock
     private AliyunClientFactory clientFactory;
@@ -94,22 +100,36 @@ class AliyunInstanceProviderTest {
     }
 
     @Test
+    void capabilitiesShouldExcludeUnsupportedDlqOperationsTest() {
+        assertThat(provider.capabilities())
+                .contains(InstanceCapability.TOPIC_MANAGEMENT,
+                        InstanceCapability.MESSAGE_QUERY,
+                        InstanceCapability.ACL_MANAGEMENT)
+                .doesNotContain(InstanceCapability.DLQ_MANAGEMENT);
+    }
+
+    @Test
     void listTopicsShouldMapMessageTypeAndFilterTest() {
         stubInstance();
         stubCallThrough();
-        ListTopicsResponse response = topicsResponse(
-                topicRow("topic-normal", "NORMAL"),
-                topicRow("topic-fifo", "FIFO"),
-                topicRow("topic-mystery", "MYSTERY"));
-        when(asyncClient.listTopics(any(ListTopicsRequest.class)))
-                .thenReturn(CompletableFuture.completedFuture(response));
+        when(asyncClient.listTopics(any(ListTopicsRequest.class))).thenAnswer(invocation -> {
+            ListTopicsRequest request = invocation.getArgument(0);
+            if (request.getMessageTypes() != null && request.getMessageTypes().contains("FIFO")) {
+                return CompletableFuture.completedFuture(topicsResponse(topicRow("topic-fifo", "FIFO")));
+            }
+            return CompletableFuture.completedFuture(topicsResponse(
+                    topicRow("topic-normal", "NORMAL"),
+                    null,
+                    topicRow("topic-fifo", "FIFO"),
+                    topicRow("topic-mystery", "MYSTERY")));
+        });
 
         List<TopicVO> all = provider.listTopics(STUDIO_INSTANCE_ID, null, null);
 
         assertThat(all).hasSize(3);
         assertThat(all.get(0).getName()).isEqualTo("topic-normal");
         assertThat(all.get(0).getType()).isEqualTo(TopicType.NORMAL);
-        assertThat(all.get(0).getInstanceId()).isEqualTo(STUDIO_INSTANCE_ID);
+        assertThat(all.get(0).getInstanceId()).isEqualTo(STUDIO_INSTANCE_PK);
         assertThat(all.get(0).getWriteQueues()).isZero();
         assertThat(all.get(0).getReadQueues()).isZero();
         assertThat(all.get(0).getRemark()).isEqualTo("remark-topic-normal");
@@ -122,6 +142,57 @@ class AliyunInstanceProviderTest {
     }
 
     @Test
+    void listTopicsShouldTraversePastLegacyFivePageCapTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.listTopics(any(ListTopicsRequest.class))).thenAnswer(invocation -> {
+            ListTopicsRequest request = invocation.getArgument(0);
+            int pageNumber = request.getPageNumber();
+            if (pageNumber <= 5) {
+                return CompletableFuture.completedFuture(topicsResponse(501L, pageNumber, AliyunConverters.PAGE_SIZE,
+                        IntStream.range(0, AliyunConverters.PAGE_SIZE)
+                                .mapToObj(index -> topicRow("topic-" + ((pageNumber - 1) * AliyunConverters.PAGE_SIZE + index),
+                                        "NORMAL"))
+                                .toArray(ListTopicsResponseBody.List[]::new)));
+            }
+            return CompletableFuture.completedFuture(topicsResponse(501L, pageNumber, AliyunConverters.PAGE_SIZE,
+                    topicRow("topic-500", "NORMAL")));
+        });
+
+        List<TopicVO> topics = provider.listTopics(STUDIO_INSTANCE_ID, null, null);
+
+        assertThat(topics).hasSize(501);
+        ArgumentCaptor<ListTopicsRequest> captor = ArgumentCaptor.forClass(ListTopicsRequest.class);
+        verify(asyncClient, times(6)).listTopics(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListTopicsRequest::getPageNumber)
+                .containsExactly(1, 2, 3, 4, 5, 6);
+    }
+
+    @Test
+    void listTopicsPageShouldUseAliyunNativePaginationAndFiltersTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.listTopics(any(ListTopicsRequest.class))).thenReturn(CompletableFuture.completedFuture(
+                topicsResponse(321L, 3L, 20L,
+                        topicRow("orders-fifo-40", "FIFO"),
+                        topicRow("orders-fifo-41", "FIFO"))));
+
+        var page = provider.listTopicsPage(STUDIO_INSTANCE_ID, "fifo", "orders", 3, 20);
+
+        assertThat(page.getTotal()).isEqualTo(321);
+        assertThat(page.getPage()).isEqualTo(3);
+        assertThat(page.getSize()).isEqualTo(20);
+        assertThat(page.getItems()).extracting(TopicVO::getName)
+                .containsExactly("orders-fifo-40", "orders-fifo-41");
+        ArgumentCaptor<ListTopicsRequest> captor = ArgumentCaptor.forClass(ListTopicsRequest.class);
+        verify(asyncClient).listTopics(captor.capture());
+        assertThat(captor.getValue().getPageNumber()).isEqualTo(3);
+        assertThat(captor.getValue().getPageSize()).isEqualTo(20);
+        assertThat(captor.getValue().getFilter()).isEqualTo("orders");
+        assertThat(captor.getValue().getMessageTypes()).containsExactly("FIFO");
+    }
+
+    @Test
     void listConsumerGroupsShouldMapGroupIdTest() {
         stubInstance();
         stubCallThrough();
@@ -129,12 +200,13 @@ class AliyunInstanceProviderTest {
                 .statusCode(200)
                 .body(ListConsumerGroupsResponseBody.builder()
                         .data(ListConsumerGroupsResponseBody.Data.builder()
-                                .list(List.of(ListConsumerGroupsResponseBody.List.builder()
-                                        .consumerGroupId("GID_test")
-                                        .messageModel("Clustering")
-                                        .status("RUNNING")
-                                        .remark("test group")
-                                        .build()))
+                                .list(java.util.Arrays.asList(null,
+                                        ListConsumerGroupsResponseBody.List.builder()
+                                                .consumerGroupId("GID_test")
+                                                .messageModel("Clustering")
+                                                .status("RUNNING")
+                                                .remark("test group")
+                                                .build()))
                                 .pageNumber(1L)
                                 .pageSize(100L)
                                 .totalCount(1L)
@@ -148,8 +220,75 @@ class AliyunInstanceProviderTest {
 
         assertThat(groups).hasSize(1);
         assertThat(groups.get(0).getName()).isEqualTo("GID_test");
-        assertThat(groups.get(0).getInstanceId()).isEqualTo(STUDIO_INSTANCE_ID);
+        assertThat(groups.get(0).getInstanceId()).isEqualTo(STUDIO_INSTANCE_PK);
         assertThat(groups.get(0).getConsumeType()).isEqualTo(ConsumeType.CLUSTERING);
+    }
+
+    @Test
+    void listConsumerGroupsShouldFetchExactlyFiveFullPagesTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.listConsumerGroups(any(ListConsumerGroupsRequest.class))).thenAnswer(invocation -> {
+            ListConsumerGroupsRequest request = invocation.getArgument(0);
+            return CompletableFuture.completedFuture(groupsResponse(500L,
+                    groupIdsForPage(request.getPageNumber(), AliyunConverters.PAGE_SIZE)));
+        });
+
+        List<ConsumerGroupVO> groups = provider.listConsumerGroups(STUDIO_INSTANCE_ID, null);
+
+        assertThat(groups).hasSize(500);
+        ArgumentCaptor<ListConsumerGroupsRequest> captor =
+                ArgumentCaptor.forClass(ListConsumerGroupsRequest.class);
+        verify(asyncClient, times(5)).listConsumerGroups(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListConsumerGroupsRequest::getPageNumber)
+                .containsExactly(1, 2, 3, 4, 5);
+    }
+
+    @Test
+    void listConsumerGroupsShouldTraversePastLegacyFivePageCapTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.listConsumerGroups(any(ListConsumerGroupsRequest.class))).thenAnswer(invocation -> {
+            ListConsumerGroupsRequest request = invocation.getArgument(0);
+            int pageNumber = request.getPageNumber();
+            if (pageNumber <= 5) {
+                return CompletableFuture.completedFuture(groupsResponse(501L,
+                        groupIdsForPage(pageNumber, AliyunConverters.PAGE_SIZE)));
+            }
+            return CompletableFuture.completedFuture(groupsResponse(501L, "GID_500"));
+        });
+
+        List<ConsumerGroupVO> groups = provider.listConsumerGroups(STUDIO_INSTANCE_ID, null);
+
+        assertThat(groups).hasSize(501);
+        ArgumentCaptor<ListConsumerGroupsRequest> captor =
+                ArgumentCaptor.forClass(ListConsumerGroupsRequest.class);
+        verify(asyncClient, times(6)).listConsumerGroups(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListConsumerGroupsRequest::getPageNumber)
+                .containsExactly(1, 2, 3, 4, 5, 6);
+    }
+
+    @Test
+    void listConsumerGroupsShouldStopOnShortPageWhenTotalCountIsMissingTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.listConsumerGroups(any(ListConsumerGroupsRequest.class))).thenAnswer(invocation -> {
+            ListConsumerGroupsRequest request = invocation.getArgument(0);
+            if (request.getPageNumber() == 1) {
+                return CompletableFuture.completedFuture(groupsResponse(null,
+                        groupIdsForPage(1, AliyunConverters.PAGE_SIZE)));
+            }
+            return CompletableFuture.completedFuture(groupsResponse(null, "GID_100"));
+        });
+
+        List<ConsumerGroupVO> groups = provider.listConsumerGroups(STUDIO_INSTANCE_ID, null);
+
+        assertThat(groups).hasSize(101);
+        ArgumentCaptor<ListConsumerGroupsRequest> captor =
+                ArgumentCaptor.forClass(ListConsumerGroupsRequest.class);
+        verify(asyncClient, times(2)).listConsumerGroups(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListConsumerGroupsRequest::getPageNumber)
+                .containsExactly(1, 2);
     }
 
     @Test
@@ -188,6 +327,37 @@ class AliyunInstanceProviderTest {
     }
 
     @Test
+    void previewResetOffsetShouldAllowLimitedCloudPreviewTest() {
+        stubInstance();
+        stubCallThrough();
+        GetConsumerGroupLagResponse response = GetConsumerGroupLagResponse.create().toBuilder()
+                .statusCode(200)
+                .body(GetConsumerGroupLagResponseBody.builder()
+                        .data(GetConsumerGroupLagResponseBody.Data.builder()
+                                .consumerGroupId("GID_test")
+                                .topicLagMap(Map.of("topic-a",
+                                        DataTopicLagMapValue.builder().readyCount(42L).build()))
+                                .build())
+                        .build())
+                .build();
+        when(asyncClient.getConsumerGroupLag(any()))
+                .thenReturn(CompletableFuture.completedFuture(response));
+
+        ResetConsumerOffsetPreviewVO preview = provider.previewResetOffset(
+                STUDIO_INSTANCE_ID, "GID_test", 1679458628000L, "topic-a");
+
+        assertThat(preview.isComplete()).isFalse();
+        assertThat(preview.isAllowReset()).isTrue();
+        assertThat(preview.getQueueCount()).isEqualTo(1);
+        assertThat(preview.getCurrentTotalLag()).isEqualTo(42L);
+        assertThat(preview.getProjectedTotalLag()).isEqualTo(-1L);
+        assertThat(preview.getWarnings())
+                .containsExactly("Provider does not expose per-queue target offset preview; confirm with current lag only");
+        assertThat(preview.getQueues().get(0).getTargetOffset()).isEqualTo(-1L);
+        assertThat(preview.getQueues().get(0).getRiskLevel()).isEqualTo("WARNING");
+    }
+
+    @Test
     void queryMessagesShouldMapFieldsAndDecodeBase64BodyTest() {
         stubInstance();
         stubCallThrough();
@@ -196,7 +366,8 @@ class AliyunInstanceProviderTest {
                 .statusCode(200)
                 .body(ListMessagesResponseBody.builder()
                         .data(ListMessagesResponseBody.Data.builder()
-                                .list(List.of(
+                                .list(java.util.Arrays.asList(
+                                        null,
                                         ListMessagesResponseBody.List.builder()
                                                 .messageId("msg-1")
                                                 .topicName("topic-a")
@@ -274,7 +445,7 @@ class AliyunInstanceProviderTest {
         assertThat(request.getDeliveryOrderType()).isEqualTo("Concurrently");
         assertThat(request.getConsumeRetryPolicy().getRetryPolicy()).isEqualTo("DefaultRetryPolicy");
         assertThat(request.getConsumeRetryPolicy().getMaxRetryTimes()).isEqualTo(16);
-        assertThat(created.getInstanceId()).isEqualTo(STUDIO_INSTANCE_ID);
+        assertThat(created.getInstanceId()).isEqualTo(STUDIO_INSTANCE_PK);
         assertThat(created.getDeliveryOrderType()).isEqualTo("Concurrently");
         assertThat(created.getRetryMaxTimes()).isEqualTo(16);
     }
@@ -343,7 +514,7 @@ class AliyunInstanceProviderTest {
                 .build();
         when(asyncClient.getTrace(any())).thenReturn(CompletableFuture.completedFuture(response));
 
-        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-1");
+        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-1", "orders");
 
         assertThat(trace.getNodes()).hasSize(3);
         TraceNodeVO producer = trace.getNodes().get(0);
@@ -356,12 +527,97 @@ class AliyunInstanceProviderTest {
         TraceNodeVO consumer = trace.getNodes().get(2);
         assertThat(consumer.getTitle()).isEqualTo("Consumer GID_test");
         assertThat(consumer.getStatus()).isEqualTo("CONSUME_OK");
+        assertThat(trace.getConsumerStatus()).singleElement().satisfies(status -> {
+            assertThat(status.getGroup()).isEqualTo("GID_test");
+            assertThat(status.getDeliveryStatus().name()).isEqualTo("success");
+            assertThat(status.getConsumeTime())
+                    .isEqualTo(AliyunConverters.parseTimeMillis("2023-03-22 12:17:10"));
+        });
+    }
+
+    @Test
+    void getMessageTraceShouldSkipNullConsumerOperations() {
+        stubInstance();
+        stubCallThrough();
+        GetTraceResponse response = GetTraceResponse.create().toBuilder()
+                .statusCode(200)
+                .body(GetTraceResponseBody.builder()
+                        .data(GetTraceResponseBody.Data.builder()
+                                .consumerInfos(List.of(GetTraceResponseBody.ConsumerInfos.builder()
+                                        .consumerGroupId("GID_test")
+                                        .records(List.of(GetTraceResponseBody.Records.builder()
+                                                .consumeStatus("CONSUME_FAILED")
+                                                .operations(java.util.Arrays.asList(null,
+                                                        GetTraceResponseBody.RecordsOperations.builder()
+                                                                .operateTime("2023-03-22 12:17:10")
+                                                                .build()))
+                                                .build()))
+                                        .build()))
+                                .build())
+                        .build())
+                .build();
+        when(asyncClient.getTrace(any())).thenReturn(CompletableFuture.completedFuture(response));
+
+        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-1", "orders");
+
+        assertThat(trace.getNodes()).singleElement()
+                .extracting(TraceNodeVO::getTimestamp)
+                .isEqualTo(AliyunConverters.parseTimeMillis("2023-03-22 12:17:10"));
+        assertThat(trace.getConsumerStatus()).singleElement().satisfies(status -> {
+            assertThat(status.getDeliveryStatus().name()).isEqualTo("failed");
+            assertThat(status.getConsumeTime())
+                    .isEqualTo(AliyunConverters.parseTimeMillis("2023-03-22 12:17:10"));
+        });
+    }
+
+    @Test
+    void getMessageTraceShouldReturnEmptyTraceWhenAliyunDataIsNullTest() {
+        stubInstance();
+        stubCallThrough();
+        GetTraceResponse response = GetTraceResponse.create().toBuilder()
+                .statusCode(200)
+                .body(GetTraceResponseBody.builder().data(null).build())
+                .build();
+        when(asyncClient.getTrace(any())).thenReturn(CompletableFuture.completedFuture(response));
+
+        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-without-trace", "orders");
+
+        assertThat(trace.getNodes()).isEmpty();
+        assertThat(trace.getConsumerStatus()).isEmpty();
+    }
+
+    @Test
+    void getMessageTraceShouldReturnEmptyTraceWhenAliyunBodyIsNullTest() {
+        stubInstance();
+        stubCallThrough();
+        GetTraceResponse response = GetTraceResponse.create().toBuilder()
+                .statusCode(200)
+                .body(null)
+                .build();
+        when(asyncClient.getTrace(any())).thenReturn(CompletableFuture.completedFuture(response));
+
+        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-without-body", "orders");
+
+        assertThat(trace.getNodes()).isEmpty();
+        assertThat(trace.getConsumerStatus()).isEmpty();
+    }
+
+    @Test
+    void getMessageTraceShouldReturnEmptyTraceWhenAliyunResponseIsNullTest() {
+        stubInstance();
+        stubCallThrough();
+        when(asyncClient.getTrace(any())).thenReturn(CompletableFuture.completedFuture(null));
+
+        TraceRecordVO trace = provider.getMessageTrace(STUDIO_INSTANCE_ID, "msg-without-response", "orders");
+
+        assertThat(trace.getNodes()).isEmpty();
+        assertThat(trace.getConsumerStatus()).isEmpty();
     }
 
     @Test
     void mappedBusinessExceptionShouldPropagateTest() {
         stubInstance();
-        when(clientFactory.call(anyString(), anyString(), any()))
+        when(clientFactory.call(any(Long.class), anyString(), any()))
                 .thenThrow(new BusinessException(404, "Aliyun resource not found"));
 
         assertThatThrownBy(() -> provider.listTopics(STUDIO_INSTANCE_ID, null, null))
@@ -378,7 +634,7 @@ class AliyunInstanceProviderTest {
                 .cloudInstanceId(CLOUD_INSTANCE_ID)
                 .regionId(REGION)
                 .build();
-        when(instanceRepository.findById(STUDIO_INSTANCE_ID)).thenReturn(Optional.of(instance));
+        when(instanceRepository.findByIdentifier(STUDIO_INSTANCE_ID)).thenReturn(Optional.of(instance));
 
         assertThatThrownBy(() -> provider.listTopics(STUDIO_INSTANCE_ID, null, null))
                 .isInstanceOf(BusinessException.class)
@@ -394,25 +650,30 @@ class AliyunInstanceProviderTest {
                 .regionId(REGION)
                 .credentialId(CREDENTIAL_ID)
                 .build();
-        when(instanceRepository.findById(STUDIO_INSTANCE_ID)).thenReturn(Optional.of(instance));
+        when(instanceRepository.findByIdentifier(STUDIO_INSTANCE_ID)).thenReturn(Optional.of(instance));
     }
 
     private void stubCallThrough() {
-        when(clientFactory.call(anyString(), anyString(), any())).thenAnswer(invocation -> {
+        when(clientFactory.call(any(Long.class), anyString(), any())).thenAnswer(invocation -> {
             Function<AsyncClient, CompletableFuture<Object>> action = invocation.getArgument(2);
             return action.apply(asyncClient).join();
         });
     }
 
     private static ListTopicsResponse topicsResponse(ListTopicsResponseBody.List... rows) {
+        return topicsResponse((long) rows.length, 1L, 100L, rows);
+    }
+
+    private static ListTopicsResponse topicsResponse(long totalCount, long pageNumber, long pageSize,
+            ListTopicsResponseBody.List... rows) {
         return ListTopicsResponse.create().toBuilder()
                 .statusCode(200)
                 .body(ListTopicsResponseBody.builder()
                         .data(ListTopicsResponseBody.Data.builder()
-                                .list(List.of(rows))
-                                .pageNumber(1L)
-                                .pageSize(100L)
-                                .totalCount((long) rows.length)
+                                .list(java.util.Arrays.asList(rows))
+                                .pageNumber(pageNumber)
+                                .pageSize(pageSize)
+                                .totalCount(totalCount)
                                 .build())
                         .build())
                 .build();
@@ -427,42 +688,125 @@ class AliyunInstanceProviderTest {
     }
 
     @Test
-    void countTopicsShouldReuseListTopicsSizeTest() {
+    void countTopicsShouldUseTotalCountWithoutFetchingEveryTopicTest() {
         stubInstance();
         stubCallThrough();
+        ListTopicsResponse response = ListTopicsResponse.create().toBuilder()
+                .statusCode(200)
+                .body(ListTopicsResponseBody.builder()
+                        .data(ListTopicsResponseBody.Data.builder()
+                                .list(List.of(topicRow("topic-a", "NORMAL")))
+                                .pageNumber(1L)
+                                .pageSize(10L)
+                                .totalCount(321L)
+                                .build())
+                        .build())
+                .build();
         when(asyncClient.listTopics(any(ListTopicsRequest.class)))
-                .thenReturn(CompletableFuture.completedFuture(topicsResponse(
-                        topicRow("topic-a", "NORMAL"),
-                        topicRow("topic-b", "FIFO"))));
+                .thenReturn(CompletableFuture.completedFuture(response));
 
-        assertThat(provider.countTopics(STUDIO_INSTANCE_ID)).isEqualTo(2);
+        assertThat(provider.countTopics(STUDIO_INSTANCE_ID)).isEqualTo(321);
+        ArgumentCaptor<ListTopicsRequest> captor = ArgumentCaptor.forClass(ListTopicsRequest.class);
+        verify(asyncClient).listTopics(captor.capture());
+        assertThat(captor.getValue().getPageNumber()).isEqualTo(1L);
+        assertThat(captor.getValue().getPageSize()).isEqualTo(10L);
     }
 
     @Test
-    void countGroupsShouldReuseListConsumerGroupsSizeTest() {
+    void countGroupsShouldUseTotalCountWithoutFetchingEveryGroupTest() {
         stubInstance();
         stubCallThrough();
         ListConsumerGroupsResponse response = ListConsumerGroupsResponse.create().toBuilder()
                 .statusCode(200)
                 .body(ListConsumerGroupsResponseBody.builder()
                         .data(ListConsumerGroupsResponseBody.Data.builder()
-                                .list(List.of(
-                                        ListConsumerGroupsResponseBody.List.builder()
-                                                .consumerGroupId("GID_one")
-                                                .build(),
-                                        ListConsumerGroupsResponseBody.List.builder()
-                                                .consumerGroupId("GID_two")
-                                                .build()))
+                                .list(List.of(ListConsumerGroupsResponseBody.List.builder()
+                                        .consumerGroupId("GID_one")
+                                        .build()))
                                 .pageNumber(1L)
-                                .pageSize(100L)
-                                .totalCount(2L)
+                                .pageSize(10L)
+                                .totalCount(654L)
                                 .build())
                         .build())
                 .build();
         when(asyncClient.listConsumerGroups(any()))
                 .thenReturn(CompletableFuture.completedFuture(response));
 
+        assertThat(provider.countGroups(STUDIO_INSTANCE_ID)).isEqualTo(654);
+        ArgumentCaptor<ListConsumerGroupsRequest> captor =
+                ArgumentCaptor.forClass(ListConsumerGroupsRequest.class);
+        verify(asyncClient).listConsumerGroups(captor.capture());
+        assertThat(captor.getValue().getPageNumber()).isEqualTo(1L);
+        assertThat(captor.getValue().getPageSize()).isEqualTo(10L);
+    }
+
+    @Test
+    void countTopicsShouldFallBackToFullListingWhenTotalCountIsMissingTest() {
+        stubInstance();
+        stubCallThrough();
+        ListTopicsResponse missingTotal = ListTopicsResponse.create().toBuilder()
+                .statusCode(200)
+                .body(ListTopicsResponseBody.builder()
+                        .data(ListTopicsResponseBody.Data.builder()
+                                .list(List.of(topicRow("topic-a", "NORMAL")))
+                                .pageNumber(1L)
+                                .pageSize(10L)
+                                .build())
+                        .build())
+                .build();
+        when(asyncClient.listTopics(any(ListTopicsRequest.class)))
+                .thenReturn(CompletableFuture.completedFuture(missingTotal))
+                .thenReturn(CompletableFuture.completedFuture(topicsResponse(
+                        topicRow("topic-a", "NORMAL"),
+                        topicRow("topic-b", "FIFO"))));
+
+        assertThat(provider.countTopics(STUDIO_INSTANCE_ID)).isEqualTo(2);
+        ArgumentCaptor<ListTopicsRequest> captor = ArgumentCaptor.forClass(ListTopicsRequest.class);
+        verify(asyncClient, times(2)).listTopics(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListTopicsRequest::getPageSize)
+                .containsExactly(10, AliyunConverters.PAGE_SIZE);
+    }
+
+    @Test
+    void countGroupsShouldFallBackToFullListingWhenTotalCountIsMissingTest() {
+        stubInstance();
+        stubCallThrough();
+        ListConsumerGroupsResponse missingTotal = groupsResponse(null, "GID_one");
+        ListConsumerGroupsResponse completeListing = groupsResponse(2L, "GID_one", "GID_two");
+        when(asyncClient.listConsumerGroups(any()))
+                .thenReturn(CompletableFuture.completedFuture(missingTotal))
+                .thenReturn(CompletableFuture.completedFuture(completeListing));
+
         assertThat(provider.countGroups(STUDIO_INSTANCE_ID)).isEqualTo(2);
+        ArgumentCaptor<ListConsumerGroupsRequest> captor =
+                ArgumentCaptor.forClass(ListConsumerGroupsRequest.class);
+        verify(asyncClient, times(2)).listConsumerGroups(captor.capture());
+        assertThat(captor.getAllValues()).extracting(ListConsumerGroupsRequest::getPageSize)
+                .containsExactly(10, AliyunConverters.PAGE_SIZE);
+    }
+
+    private static ListConsumerGroupsResponse groupsResponse(Long totalCount, String... groupIds) {
+        return ListConsumerGroupsResponse.create().toBuilder()
+                .statusCode(200)
+                .body(ListConsumerGroupsResponseBody.builder()
+                        .data(ListConsumerGroupsResponseBody.Data.builder()
+                                .list(java.util.Arrays.stream(groupIds)
+                                        .map(groupId -> ListConsumerGroupsResponseBody.List.builder()
+                                                .consumerGroupId(groupId)
+                                                .build())
+                                        .toList())
+                                .pageNumber(1L)
+                                .pageSize((long) AliyunConverters.PAGE_SIZE)
+                                .totalCount(totalCount)
+                                .build())
+                        .build())
+                .build();
+    }
+
+    private static String[] groupIdsForPage(int pageNumber, int pageSize) {
+        return IntStream.range(0, pageSize)
+                .mapToObj(index -> "GID_" + ((pageNumber - 1) * pageSize + index))
+                .toArray(String[]::new);
     }
 
     @Test
@@ -475,5 +819,16 @@ class AliyunInstanceProviderTest {
                 AliyunInstanceProvider.normalizeDeliveryOrderType(null));
         org.junit.jupiter.api.Assertions.assertEquals("Concurrently",
                 AliyunInstanceProvider.normalizeDeliveryOrderType("Concurrently"));
+    }
+
+    @Test
+    void timeConversionUsesAliyunUtc8Zone() {
+        // "2024-01-01 00:00:00" is 2023-12-31T16:00:00Z in UTC+8 regardless of server zone.
+        long expectedUtc8 = java.time.LocalDateTime.of(2024, 1, 1, 0, 0)
+                .atZone(java.time.ZoneId.of("Asia/Shanghai")).toInstant().toEpochMilli();
+        assertThat(AliyunConverters.parseTimeMillis("2024-01-01 00:00:00")).isEqualTo(expectedUtc8);
+
+        // Round-trip formatting must restore the same calendar time in UTC+8.
+        assertThat(AliyunConverters.formatTimeMillis(expectedUtc8)).isEqualTo("2024-01-01 00:00:00");
     }
 }
